--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,10 @@
 @import "bootstrap-sprockets";  /*ここを追加*/
 @import "bootstrap";            /*ここを追加*/
 
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+
+
 header {
 	color:white;
 }
