--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,6 +30,7 @@
 					<th></th>
 					<th>Title</th>
 					<th>Opinion</th>
+					<th></th>
 					<th colspan="3"></th>
 				</tr>
 			</thead>
@@ -44,6 +45,19 @@
 					</td>
 					<td><%= link_to book.title, book, class: "book_#{book.id}" %></td>
 					<td><%= book.body %></td>
+					<td>
+						<% if book.favorited_by?(current_user) %>
+                			<%= link_to book_favorite_path(book), method: :delete do %>
+                			<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+                			<%= book.favorites.count %>
+               			    <% end %>
+              			<% else %>
+                			<%= link_to book_favorite_path(book), method: :post do %>
+                			<i class="fa fa-heart" aria-hidden="true" style="color: black;"></i>
+                			<%= book.favorites.count %>
+                			<% end %>
+                		<% end %>
+            		</td>
 				</tr>
 				<% end %>
 			</tbody>
