--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -31,6 +31,7 @@
 					<th>Title</th>
 					<th>Opinion</th>
 					<th></th>
+					<th></th>
 					<th colspan="3"></th>
 				</tr>
 			</thead>
@@ -58,6 +59,7 @@
                 			<% end %>
                 		<% end %>
             		</td>
+            		<td>コメント数：　<%= book.book_comments.count %></td>
 				</tr>
 				<% end %>
 			</tbody>
