--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,6 +18,7 @@
 			<th></th>
 			<th>Title</th>
 			<th>Opinion</th>
+			<th></th>
 			<th colspan="3"></th>
 		</tr>
 	</thead>
@@ -32,6 +33,7 @@
 			</td>
 			<td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
 			<td><%= book.body %></td>
+			<td>コメント数：　<%= book.book_comments.count %></td>
 		</tr>
 		<% end %>
 	</tbody>
