--- a/app/views/layouts/_follow.html.erb
+++ b/app/views/layouts/_follow.html.erb
@@ -1,17 +1,3 @@
-<div class="row">
-	<div class="col-xs-3">
-
-<h2>User info</h2>
-<%= render 'users/profile', user: current_user %>
-<!--メモ　右側の指定に注意。そこを間違えるとエラーが発生して表示されない -->
-
-<h2>New book</h2>
-<%= render 'books/newform', book: @book %>
-	</div>
-
-	<div class="col-xs-9">
-<h2>Users</h2>
-<!--users一覧 -->
 <table class="table">
 	<thead>
 		<tr>
@@ -25,11 +11,11 @@
 	</thead>
 
 	<tbody>
-		<% @users.each do |user| %>
+		<% users.each do |user| %>
 		<tr>
 			<td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
 			<td><%= user.name%></td>
-			<td><%= user.followings.count %></td>
+			<td><%= user.relationships.count  %></td>
 			<td><%= user.followers.count %></td>
 			<td>
 				<% unless current_user.id == user.id %>
@@ -45,7 +31,3 @@
 		<% end %>
 	</tbody>
 </table>
-<!--users一覧 -->
-
-</div>
-</div>
