--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -10,8 +10,32 @@
 			<th>introduction</th>
 			<th><%= user.introduction %></th>
 		</tr>
+		<tr>
+			<th>follows</th>
+			<th>
+				<%= link_to following_user_path(user) do %>
+					<%= user.followings.count %>
+				<% end %>
+			</th>
+		</tr>
+		<tr>
+			<th>followers</th>
+			<th>
+				<%= link_to followers_user_path(user) do %>
+					<%= user.followers.count %>
+				<% end %>
+			</th>
+		</tr>
 </table>
 
 <div class="row">
+<% if current_user.id == user.id %>
 	<%= link_to '',edit_user_path(user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{user.id}" %>
+<% else %>
+	<% if current_user.following?(user) %>
+		<%= link_to 'フォローを外す', user_relationship_path(user.id), method: :delete, class: "btn btn-danger col-xs-12" %>
+	<% else %>
+		<%= link_to 'フォローする', user_relationship_path(user.id), method: :post, class: "btn btn-success col-xs-12" %>
+	<% end %>
+<% end %>
 </div>
