--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -41,29 +41,9 @@
 
 			<tbody>
 				<% @books.each do |book| %>
-				<tr>
-					<td>
-						<%= link_to(book.user) do %>
-						<%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
-						<% end %>
-					</td>
-					<td><%= link_to book.title, book, class: "book_#{book.id}" %></td>
-					<td><%= book.body %></td>
-					<td>
-						<% if book.favorited_by?(current_user) %>
-                			<%= link_to book_favorite_path(book), method: :delete do %>
-                			<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-                			<%= book.favorites.count %>
-               			    <% end %>
-              			<% else %>
-                			<%= link_to book_favorite_path(book), method: :post do %>
-                			<i class="fa fa-heart" aria-hidden="true" style="color: black;"></i>
-                			<%= book.favorites.count %>
-                			<% end %>
-                		<% end %>
-            		</td>
-            		<td>コメント数：　<%= book.book_comments.count %></td>
-				</tr>
+				 <tr id="favorites_<%= book.id %>">
+				 	<%= render 'books/post', book: book %>
+				 </tr>
 				<% end %>
 			</tbody>
 		</table>
