--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,7 +7,6 @@
 
 <%= render 'layouts/search' %>
 
-<%= form_for(@comment) do |f| %>
 <div class="row">
 	<div class="col-xs-3">
 
@@ -34,15 +33,9 @@
 
 
 		<% if @comments.count > 0 %>
-				<% @comments.each do |c| %>
-					<div class="comment">
-						<%= attachment_image_tag(c.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg") %><br>
-						<%= c.comment %> by <%= c.user.name %>
-					<% if current_user.id == c.user_id %>
-						<%= link_to '削除する', book_comment_path(c), method: :delete, class:"btn btn-danger" %>
-					<% end %>
-					</div>
-				<% end %>
+			<div class="comment">
+				<%= render partial: 'books/comment', collection: @comments %>
+			</div>
 		<% else %>
 			<h6>まだコメントはありません</h6>
 		<% end %>
@@ -50,14 +43,10 @@
 
 
 		<!-- コメント送信フォーム -->
-		<div class="row" style="padding: 10px;">
-			<%= hidden_field_tag :book_id, @book.id %>
-			<%= f.text_area :comment, class: "col-xs-12", rows:"5" %>
-		 <div class="pull-right">
-			<%= f.submit '送信する' %>
-		</div>
+		<div class="row" id="commentform" style="padding: 10px;">
+			<%= render 'books/commentform', book: @book %>
 		</div>
 
 	</div>
 </div>
-		<% end %>
+
